Started prec-recall functions for the various exp_models

--- a/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
+++ b/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a truthset for each combination of (1) a specific exponential model of AAF distribution, (2) variant type (3) sample and region."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,485 +34,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in model parameters into `expm` for all combinations and create a truthset for each combination storing the names of output VCFs in `outvcfs`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "expm = pd.read_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/exp_model.csv',\n",
-    "                   dtype={'lambda': 'category', 'region': 'category', 'sample': 'category', 'vartype': 'category', 'log10s2g': 'category'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AAF</th>\n",
-       "      <th>count</th>\n",
-       "      <th>lambda</th>\n",
-       "      <th>log10s2g</th>\n",
-       "      <th>ntot</th>\n",
-       "      <th>region</th>\n",
-       "      <th>sample</th>\n",
-       "      <th>vartype</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1444</th>\n",
-       "      <td>2</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1445</th>\n",
-       "      <td>4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1446</th>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1447</th>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1448</th>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      AAF  count lambda log10s2g  ntot region sample vartype\n",
-       "1444    2     23    0.2       -3    70  chr22   mix1     snp\n",
-       "1445    4     15    0.2       -3    70  chr22   mix1     snp\n",
-       "1446    6     10    0.2       -3    70  chr22   mix1     snp\n",
-       "1447    8      6    0.2       -3    70  chr22   mix1     snp\n",
-       "1448   10      4    0.2       -3    70  chr22   mix1     snp"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sel_rows = (expm['lambda'] == '0.2') & (expm['log10s2g'] == '-3') & (expm['region'] == 'chr22') & (expm['sample'] == 'mix1') & (expm['vartype'] == 'snp')\n",
-    "df = expm.loc[sel_rows, :]\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>772</th>\n",
-       "      <td>22</td>\n",
-       "      <td>18851313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>22</td>\n",
-       "      <td>20034187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1994</th>\n",
-       "      <td>22</td>\n",
-       "      <td>23657326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2498</th>\n",
-       "      <td>22</td>\n",
-       "      <td>25579548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3315</th>\n",
-       "      <td>22</td>\n",
-       "      <td>27547533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3329</th>\n",
-       "      <td>22</td>\n",
-       "      <td>27610825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4066</th>\n",
-       "      <td>22</td>\n",
-       "      <td>29350370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4398</th>\n",
-       "      <td>22</td>\n",
-       "      <td>30630256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4417</th>\n",
-       "      <td>22</td>\n",
-       "      <td>30742125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4767</th>\n",
-       "      <td>22</td>\n",
-       "      <td>31942770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5106</th>\n",
-       "      <td>22</td>\n",
-       "      <td>33168255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5198</th>\n",
-       "      <td>22</td>\n",
-       "      <td>33429261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5359</th>\n",
-       "      <td>22</td>\n",
-       "      <td>33965912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5872</th>\n",
-       "      <td>22</td>\n",
-       "      <td>35155001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6545</th>\n",
-       "      <td>22</td>\n",
-       "      <td>36800039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7167</th>\n",
-       "      <td>22</td>\n",
-       "      <td>38592967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7514</th>\n",
-       "      <td>22</td>\n",
-       "      <td>39624914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7763</th>\n",
-       "      <td>22</td>\n",
-       "      <td>40596888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7822</th>\n",
-       "      <td>22</td>\n",
-       "      <td>40977940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8205</th>\n",
-       "      <td>22</td>\n",
-       "      <td>43910341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9011</th>\n",
-       "      <td>22</td>\n",
-       "      <td>46326272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9608</th>\n",
-       "      <td>22</td>\n",
-       "      <td>47806356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10713</th>\n",
-       "      <td>22</td>\n",
-       "      <td>49616543</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      CHROM       POS\n",
-       "772      22  18851313\n",
-       "947      22  20034187\n",
-       "1994     22  23657326\n",
-       "2498     22  25579548\n",
-       "3315     22  27547533\n",
-       "3329     22  27610825\n",
-       "4066     22  29350370\n",
-       "4398     22  30630256\n",
-       "4417     22  30742125\n",
-       "4767     22  31942770\n",
-       "5106     22  33168255\n",
-       "5198     22  33429261\n",
-       "5359     22  33965912\n",
-       "5872     22  35155001\n",
-       "6545     22  36800039\n",
-       "7167     22  38592967\n",
-       "7514     22  39624914\n",
-       "7763     22  40596888\n",
-       "7822     22  40977940\n",
-       "8205     22  43910341\n",
-       "9011     22  46326272\n",
-       "9608     22  47806356\n",
-       "10713    22  49616543"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outvcfpath = '/home/attila/projects/bsm/results/2019-03-18-truth-sets/chr22/snp/truthset/aaf/exp_model/lambda_0.2/log10s2g_-3/mix1/2.vcf.gz'\n",
-    "invcfpath = '/home/attila/projects/bsm/results/2019-03-18-truth-sets/chr22/snp/truthset/aaf/unfiltered/mix1/2.vcf.gz'\n",
-    "ssize = 23\n",
-    "dstset.sample_positions(ssize=ssize, invcfpath=invcfpath, outvcfpath=outvcfpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AAF</th>\n",
-       "      <th>count</th>\n",
-       "      <th>lambda</th>\n",
-       "      <th>log10s2g</th>\n",
-       "      <th>ntot</th>\n",
-       "      <th>region</th>\n",
-       "      <th>sample</th>\n",
-       "      <th>vartype</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1483</th>\n",
-       "      <td>92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1484</th>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1485</th>\n",
-       "      <td>96</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1486</th>\n",
-       "      <td>98</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1487</th>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>chr22</td>\n",
-       "      <td>mix1</td>\n",
-       "      <td>snp</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      AAF  count lambda  log10s2g  ntot region sample vartype\n",
-       "1483   92      0    0.2        -3    70  chr22   mix1     snp\n",
-       "1484   94      0    0.2        -3    70  chr22   mix1     snp\n",
-       "1485   96      0    0.2        -3    70  chr22   mix1     snp\n",
-       "1486   98      0    0.2        -3    70  chr22   mix1     snp\n",
-       "1487  100      0    0.2        -3    70  chr22   mix1     snp"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [CHROM, POS]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outvcfpath = '/home/attila/projects/bsm/results/2019-03-18-truth-sets/chr22/snp/truthset/aaf/exp_model/lambda_0.2/log10s2g_-3/mix1/92.vcf.gz'\n",
-    "invcfpath = '/home/attila/projects/bsm/results/2019-03-18-truth-sets/chr22/snp/truthset/aaf/unfiltered/mix1/92.vcf.gz'\n",
-    "ssize = 0\n",
-    "dstset.sample_positions(ssize=ssize, invcfpath=invcfpath, outvcfpath=outvcfpath)"
+    "                   dtype={'lambda': 'category', 'region': 'category', 'sample': 'category', 'vartype': 'category', 'log10s2g': 'category'})\n",
+    "outvcfs = tsa.downsample_absolutely_all_vcfs(expm, topdir='/home/attila/projects/bsm/results/2019-03-18-truth-sets', seed=19760415)"
    ]
   },
   {
