prec-recall scripts for exp_model

--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -830,7 +830,9 @@
    "source": [
     "### Exponential models at $\\log_{10}\\mathrm{s2g}=-3$\n",
     "\n",
-    "These are the models with 1:1000 odds of somatic : germline variants in total."
+    "These are the models with 1:1000 odds of somatic : germline variants in total.\n",
+    "\n",
+    "#### All autosomes"
    ]
   },
   {
@@ -868,7 +870,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking only chr22 (or at less negative $\\log_{10}\\mathrm{s2g}$) we have fewer variants and therefore the plots look steplike because rounding to integers has larger effect."
+    "Taking only chr22 (or at less negative $\\log_{10}\\mathrm{s2g}$) we have fewer variants and therefore the plots look steplike because rounding to integers has larger effect.\n",
+    "\n",
+    "#### chr22"
    ]
   },
   {
