now creating also discarded truthsets while downsampling

--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -1067,6 +1067,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"iopub_port\": 37373,\n",
+      "  \"key\": \"c73e2d65-7919c1316e2e383adb1df4fe\",\n",
+      "  \"hb_port\": 58739,\n",
+      "  \"control_port\": 43269,\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"shell_port\": 56891,\n",
+      "  \"stdin_port\": 33671,\n",
+      "  \"kernel_name\": \"\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-fdaba13c-b3af-4a98-9e32-ceaa8a076cef.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%connect_info"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
