preparing callsets for prec-recall

--- a/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
+++ b/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,12 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import truth_sets_aaf as tsa\n",
-    "import downsize_truthset as dstset\n",
     "import pandas as pd\n",
     "import multi_prec_recall as multipr"
    ]
@@ -43,13 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "expm = pd.read_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/exp_model.csv',\n",
     "                   dtype={'lambda': 'category', 'region': 'category', 'sample': 'category', 'vartype': 'category', 'log10s2g': 'category'})\n",
-    "outvcfs = tsa.downsample_absolutely_all_vcfs(expm, topdir='/home/attila/projects/bsm/results/2019-03-18-truth-sets', seed=19760415)"
+    "outvcfs = tsa.downsample_absolutely_all_vcfs(expm, topdir='/home/attila/projects/bsm/results/2019-03-18-truth-sets', seed=19760415)\n",
+    "pd.DataFrame({'outvcf': outvcfs}).to_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/outvcfs.csv', index=False)"
    ]
   },
   {
@@ -61,16 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame({'outvcf': outvcfs}).to_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/outvcfs.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
