Adding region chr1+2 to prec-recall in progress

--- a/notebook/2019-03-18-truth-sets/2019-03-18-truth-sets.ipynb
+++ b/notebook/2019-03-18-truth-sets/2019-03-18-truth-sets.ipynb
@@ -75,6 +75,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Creating truth sets\n",
+    "\n",
+    "Use the following script to create truth sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Create truth a set for snps and indels\n",
+      "\n",
+      "Usage:\n",
+      "truth-sets [-v combinationIsUnion] [-p numproc] -a true|false -r regions\n",
+      "\n",
+      "Options:\n",
+      "    c) combinationIsUnion (true): true|false; Combine Chesslab and Illumina callsets with union? (Otherwise intersection)\n",
+      "    p) numproc (16): number of processors\n",
+      "    r) regions (22): genomic regions e.g. 1,2\n",
+      "    a) allautosomes (false): true|false; Include all autosomes in truth set?  (Otherwise only 'regions')\n",
+      "    h) displayHelp (flag): display this help page\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/projects/bsm/notebook/2019-03-18-truth-sets\n",
+    "./truth-sets -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Number of variants\n",
     "\n",
     "We will take our (the Chesslab's) callset for NA12889 assuming it is representative for the callsets for all other CEPH/Utah grandparents, produced by Illumina or us.  The VCF is at `~/projects/bsm/results/calls/ceph-utah/illumina/NA12889.vcf.gz` on attila-ThinkS and `/projects/bsm/calls/ceph-utah/chesslab/NA12889.vcf.gz` on Ada."
