updated notebook with crashed VariantMetaCaller result

--- a/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
+++ b/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
@@ -133,6 +133,49 @@
    "source": [
     "## Results\n",
     "\n",
+    "### Running VariantMetaCaller\n",
+    "\n",
+    "The following result shows that VariantMetaCaller didn't run on the entire input data that correspond to chr1 + chr2.  It exited somewhere arund the third of chr1.\n",
+    "\n",
+    "TODO: make correction for this in the recall values below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 506,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lenght of chr1 and chr2\n",
+      "1\t249250621\n",
+      "2\t243199373\n",
+      "\n",
+      "Last positions in the output of VariantMetaCaller\n",
+      "1\t86682154\n",
+      "1\t86682202\n",
+      "1\t86682251\n",
+      "1\t86682277\n",
+      "1\t86682278\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/data/refgenome/GRCh37/dna\n",
+    "echo Lenght of chr1 and chr2\n",
+    "head -n2 hs37d5.fa.fai | cut -f1-2\n",
+    "echo -e '\\nLast positions in the output of VariantMetaCaller'\n",
+    "cd /home/attila/projects/bsm/results/2018-06-22-variant-meta-caller-test/vmc-prioritize-benchmark/test17ada/\n",
+    "bcftools view results.vcf 2> /dev/null | tail -n5 | cut -f1-2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### SNVs\n",
     "\n",
     "The plots below show\n",
@@ -143,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +196,7 @@
        " 'named-figure/prec-recall-snp-log10s2g-2.pdf']"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 497,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +245,7 @@
    ],
    "source": [
     "fg = multipr.plotter1(pr=pr, vmc_pr=vmc_pr_ada, sample='mix1', log10s2g=-3, vartype='snp')\n",
-    "attila_utils.savefig(fg, 'prec-recall-snp-log10s2g-3')"
+    "attila_utils.savefig(fg, 'prec-recall-snp-log10s2g')"
    ]
   },
   {
