--- a/notebook/2019-07-23-commonsample-precrecall/2019-07-23-commonsample-precrecall.ipynb
+++ b/notebook/2019-07-23-commonsample-precrecall/2019-07-23-commonsample-precrecall.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = prvcf.prec_recall_all()"
+    "results = prvcf.prec_recall_all(callers=['lofreqSomatic', 'somaticSniper', 'strelka2Germline', 'strelka2Somatic', 'Tnseq'], callsetdir='/big/results/bsm/2018-02-22-ref-tissue-proj-testdata/wgs/vcf/snvs/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +225,7 @@
        "0  2.29647e-05  0.142857  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,6 +267,125 @@
     "fg.axes[0][0].set_ylim(-1e-5, 0.0004)\n",
     "fg.axes[0][0].set_xlim(-1e-2, )\n",
     "attila_utils.savefig(fg, 'prec-recall-common-sample')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking input alignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_new = prvcf.prec_recall_all(callers=['somaticSniper', 'strelka2Somatic'], callsetdir='/big/results/bsm/2019-08-02-common-sample-new-alignment/snvs/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>caller</th>\n",
+       "      <th>PASS_filter</th>\n",
+       "      <th>n_variants</th>\n",
+       "      <th>n_calls</th>\n",
+       "      <th>n_truecalls</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>somaticSniper</td>\n",
+       "      <td>True</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>strelka2Somatic</td>\n",
+       "      <td>True</td>\n",
+       "      <td>42</td>\n",
+       "      <td>52352</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5.73044e-05</td>\n",
+       "      <td>0.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>somaticSniper</td>\n",
+       "      <td>False</td>\n",
+       "      <td>42</td>\n",
+       "      <td>365637</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.46991e-06</td>\n",
+       "      <td>0.047619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>strelka2Somatic</td>\n",
+       "      <td>False</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2045868</td>\n",
+       "      <td>17</td>\n",
+       "      <td>8.30943e-06</td>\n",
+       "      <td>0.404762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            caller  PASS_filter  n_variants  n_calls  n_truecalls  \\\n",
+       "0    somaticSniper         True          42        0            0   \n",
+       "0  strelka2Somatic         True          42    52352            3   \n",
+       "0    somaticSniper        False          42   365637            2   \n",
+       "0  strelka2Somatic        False          42  2045868           17   \n",
+       "\n",
+       "     precision    recall  \n",
+       "0         None  0.000000  \n",
+       "0  5.73044e-05  0.071429  \n",
+       "0  5.46991e-06  0.047619  \n",
+       "0  8.30943e-06  0.404762  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_new"
    ]
   },
   {
