updated presentation with new figures

--- a/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
+++ b/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
@@ -659,17 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['named-figure/prec-recall-snp-lambda_0.2.png',\n",
-       " 'named-figure/prec-recall-snp-lambda_0.2.pdf']"
+       "['named-figure/prec-recall-snp-lambda-02.png',\n",
+       " 'named-figure/prec-recall-snp-lambda-02.pdf']"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -686,7 +686,7 @@
    ],
    "source": [
     "fg = multipr.plotter4(pr, vmc_pr_ada, vartype='snp')\n",
-    "attila_utils.savefig(fg, 'prec-recall-snp-lambda_0.2')"
+    "attila_utils.savefig(fg, 'prec-recall-snp-lambda-02')"
    ]
   },
   {
