log10s2g renamed to s2g

--- a/presentations/2019-08-09-bsmn-writing-group/2019-08-09-bsmn-writing-group.tex
+++ b/presentations/2019-08-09-bsmn-writing-group/2019-08-09-bsmn-writing-group.tex
@@ -147,7 +147,7 @@ genotype & \multicolumn{3}{c}{AAF (\%)} \\
 \(\hat{\lambda} = 0.2\)
 \end{center}
 
-\includegraphics[scale=0.2]{../../notebook/2019-04-24-vaf-model-taejeong/named-figure/tj-vaf-hist-expon.pdf}
+\includegraphics[width=1.0\columnwidth]{../../notebook/2019-04-24-vaf-model-taejeong/named-figure/tj-vaf-hist-expon.pdf}
 
 \tiny Bae et al 2018 (Science 359 (6375), 550-555)
 \end{column}
