--- a/notebook/2019-08-15-benchmark-calls/2019-08-15-benchmark-calls.ipynb
+++ b/notebook/2019-08-15-benchmark-calls/2019-08-15-benchmark-calls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import benchmark_caller as bcaller"
+    "import truth_sets_aaf as tsa\n",
+    "import pandas as pd\n",
+    "import multi_prec_recall as multipr\n",
+    "import seaborn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outvcfs = list(pd.read_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/outvcfs.csv')['outvcf'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +46,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 52337,\n",
-      "  \"iopub_port\": 34175,\n",
-      "  \"stdin_port\": 47377,\n",
-      "  \"control_port\": 36759,\n",
-      "  \"hb_port\": 35765,\n",
+      "  \"shell_port\": 36321,\n",
+      "  \"iopub_port\": 52565,\n",
+      "  \"stdin_port\": 46191,\n",
+      "  \"control_port\": 50317,\n",
+      "  \"hb_port\": 51547,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"e79e0c3c-636aa68fc7c0c88f2daeb9b9\",\n",
+      "  \"key\": \"29044189-220d22a065a1f5fdf87cd427\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -49,7 +61,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-5fd93fb1-6d63-425c-b100-c977e3fd750f.json\n",
+      "    $> jupyter <app> --existing kernel-ff822c3d-af13-478e-881c-831e81444d8d.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -84,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
