--- a/notebook/2019-08-15-benchmark-calls/2019-08-15-benchmark-calls.ipynb
+++ b/notebook/2019-08-15-benchmark-calls/2019-08-15-benchmark-calls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,45 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outvcfs = list(pd.read_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/outvcfs.csv')['outvcf'])"
+    "pr = multipr.prepare_reduce_precrecall_all()\n",
+    "pr.to_csv('/home/attila/projects/bsm/results/2019-08-15-benchmark-calls/pr.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 36321,\n",
-      "  \"iopub_port\": 52565,\n",
-      "  \"stdin_port\": 46191,\n",
-      "  \"control_port\": 50317,\n",
-      "  \"hb_port\": 51547,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"29044189-220d22a065a1f5fdf87cd427\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-ff822c3d-af13-478e-881c-831e81444d8d.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
