--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nvariants = tsa.make_ts_aaf_get_nvariants()"
+    "if True:\n",
+    "    nvariants = tsa.make_ts_aaf_get_nvariants()"
    ]
   },
   {
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +606,7 @@
        "lambda_hat  0.221052  0.235704  0.224425"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +739,7 @@
        "4   10    533  autosomes   mix1   indel  -2  8000    0.2"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +855,7 @@
        "2  100      0  chr22   mix3     snp  -4     7   0.04"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +886,7 @@
        "['named-figure/exp-model0.png', 'named-figure/exp-model0.pdf']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -914,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +924,7 @@
        "['named-figure/exp-model1.png', 'named-figure/exp-model1.pdf']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +964,7 @@
        "['named-figure/exp-model2.png', 'named-figure/exp-model2.pdf']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -992,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1002,7 @@
        "['named-figure/exp-model-mix3.png', 'named-figure/exp-model-mix3.pdf']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1132,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1142,7 @@
        "{'a': 64.16025641025641, 'b': -1.2832051282051282}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1185,7 @@
        "['named-figure/vaf-mix123-L1234.png', 'named-figure/vaf-mix123-L1234.pdf']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1206,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1214,13 +1215,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 45869,\n",
-      "  \"iopub_port\": 43077,\n",
-      "  \"stdin_port\": 57717,\n",
-      "  \"control_port\": 39335,\n",
-      "  \"hb_port\": 39919,\n",
+      "  \"shell_port\": 38713,\n",
+      "  \"iopub_port\": 38853,\n",
+      "  \"stdin_port\": 60005,\n",
+      "  \"control_port\": 46953,\n",
+      "  \"hb_port\": 44771,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"156fa2dd-818c1d1044ca57572c4f15c8\",\n",
+      "  \"key\": \"eb4fefea-c17707f49256e2ad87631092\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1229,7 +1230,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-82d73c5d-fc84-4b32-aae7-929adbe230f3.json\n",
+      "    $> jupyter <app> --existing kernel-b75cbd35-f29d-4ee2-86ac-12e943769b92.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
