--- a/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
+++ b/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
@@ -99,7 +99,7 @@ r(C) = \frac{|C \cap V|}{|V|} = \frac{\#\text{true calls}}{\#\mathrm{variants}}
 
 \begin{column}{0.5\textwidth}
 
-{\tiny
+{\footnotesize
 {\large mixing proportions}
 
 \begin{tabular}{r|ccc}
@@ -111,32 +111,14 @@ NA12890 & 16 & 8 & 0 \\
 NA12892 & 72 & 86 & 100 \\
 & & & \\
 \end{tabular}
-\vfill
-{\large genotype frequencies}
-
-\begin{tabular}{c|ccc}
-genotype & \multicolumn{3}{c}{AAF (\%)} \\
-& mix1 &  mix2 & mix3 \\
-\hline
-0001 & 36 & 43 & 50\\
-0010 & 8 & 4 & 0\\
-0100 & 4 & 2 & 0\\
-1000 & 2 & 1 & 0\\
-0002 & 72 & 86 & 100\\
-... & ... & ... & ...\\
-1222 & 98 & 99 & 100\\
-2122 & 96 & 98 & 100\\
-2212 & 92 & 96 & 100\\
-2221 & 64 & 57 & 50\\
-2222 & 100 & 100 & 100\\
-\end{tabular}
 }
 \end{column}
 \end{columns}
 \end{frame}
 
 \begin{frame}{Allele frequency}
-
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
 {\tiny
 \begin{tabular}{c|ccc}
 genotype & \multicolumn{3}{c}{AAF (\%)} \\
@@ -155,46 +137,35 @@ genotype & \multicolumn{3}{c}{AAF (\%)} \\
 2222 & 100 & 100 & 100\\
 \end{tabular}
 }
-\end{frame}
 
-\begin{frame}{Unrealistic: (1) number of variants; (2) AAF distribution}
-\includegraphics[scale=0.3]{../../notebook/2019-04-04-truth-sets-aaf/named-figure/vaf-mix123-vaf.pdf}
-\end{frame}
-
-\begin{frame}{What's realistic?}
-
-\begin{columns}
-\begin{column}{0.5\textwidth}
-\begin{center}
-\(\hat{\lambda} = 0.2\)
-\end{center}
-
-\includegraphics[width=1.0\columnwidth]{../../notebook/2019-04-24-vaf-model-taejeong/named-figure/tj-vaf-hist-expon.pdf}
-
-\tiny Bae et al 2018 (Science 359 (6375), 550-555)
+\includegraphics[width=1.0\columnwidth]{../../notebook/2019-04-24-vaf-model-taejeong/named-figure/tj-vaf-hist-expon-pooled.pdf}
 \end{column}
 
 \begin{column}{0.5\textwidth}
-\# somatic variants in autosomes
-\begin{center}
-\begin{tabular}{c|r|r}
-s2g & SNV & indel \\
-\hline
--4 & 400 & 80 \\
--3 & 4000 & 800 \\
--2 & 40000 & 8000 \\
-\end{tabular}
-\end{center}
+
+\includegraphics[width=1.0\columnwidth]{../../notebook/2019-04-04-truth-sets-aaf/named-figure/vaf-mix1-vaf.pdf}
+
+\includegraphics[width=1.0\columnwidth]{../../notebook/2019-04-04-truth-sets-aaf/named-figure/exp-model0-lam02-mix1.pdf}
 \end{column}
 \end{columns}
 \end{frame}
 
-%\begin{frame}{Performance: indels}
-%\includegraphics[width=1.0\textwidth]{../../notebook/2019-05-02-make-truth-sets/named-figure/prec-recall-indel-region-autosomes.pdf}
-%\end{frame}
-
 \begin{frame}{Performance: SNVs}
 \includegraphics[width=1.0\textwidth]{../../notebook/2019-08-15-benchmark-calls/named-figure/prec-recall-snp-region-autosomes-mix3_ctr.pdf}
+\end{frame}
+
+\begin{frame}
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+
+\includegraphics[scale=0.3]{../../notebook/2019-07-23-commonsample-precrecall/named-figure/prec-recall-common-sample-mosaicforecast.pdf}
+\end{column}
+
+\begin{column}{0.5\textwidth}{Discrepancy: MosaicForecast}
+
+\includegraphics[width=1.0\columnwidth]{../../notebook/2019-08-15-benchmark-calls/named-figure/prec-recall-snp-region-autosomes-mix3_ctr.pdf}
+\end{column}
+\end{columns}
 \end{frame}
 
 \begin{frame}{Effect of control sample}
@@ -203,6 +174,14 @@ s2g & SNV & indel \\
 
 \begin{frame}{A family of new truth sets}
 \includegraphics[width=1.0\textwidth]{../../notebook/2019-04-04-truth-sets-aaf/named-figure/exp-model-mix1.pdf}
+\footnotesize
+\begin{tabular}{c|r|r}
+s2g & SNV & indel \\
+\hline
+-4 & 400 & 80 \\
+-3 & 4000 & 800 \\
+-2 & 40000 & 8000 \\
+\end{tabular}
 \end{frame}
 
 \begin{frame}{Effect of number of somatic variants}
@@ -213,7 +192,19 @@ s2g & SNV & indel \\
 \includegraphics[width=1.0\textwidth]{../../notebook/2019-08-15-benchmark-calls/named-figure/prec-recall-lambda-effect.pdf}
 \end{frame}
 
-\begin{frame}[plain]{VariantMetaCaller}
+\begin{frame}{VariantMetaCaller}
+\begin{itemize}
+\item a support vector machine classifier for each caller
+\begin{itemize}
+\item discordance pattern (Venn diagram) of callsets
+\item input features: quality annotations 
+\end{itemize}
+\item probabilisty score for calls
+\item filter at arbitrary precision (\(1-\mathrm{FDR}\))
+\end{itemize}
+\end{frame}
+
+\begin{frame}[plain]{VariantMetaCaller: precision--recall curve}
 \includegraphics[width=1.0\textwidth]{../../notebook/2019-08-15-benchmark-calls/named-figure/prec-recall-vmc-s2g-3.pdf}
 \end{frame}
 
